우측상단 alarm 카운트 0일 경우 안보이도록 수정. alram화면 모두읽음 표시 카운트0일 경우 disable 처리 작업.

--- a/app/src/main/res/layout/view_toolbar.xml
+++ b/app/src/main/res/layout/view_toolbar.xml
@@ -75,6 +75,7 @@
             android:textColor="#ffffff"
             android:letterSpacing="-0.03"
             android:lineSpacingExtra="4dp"
+            android:visibility="invisible"
             android:text="0"/>
     </RelativeLayout>
 
