--- a/app/src/main/res/xml/network_vguard_config.xml
+++ b/app/src/main/res/xml/network_vguard_config.xml
@@ -12,4 +12,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">google.co.kr</domain>
     </domain-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">koscom.co.kr</domain>
+    </domain-config>
 </network-security-config>
