--- a/app/src/main/res/layout/view_toolbar.xml
+++ b/app/src/main/res/layout/view_toolbar.xml
@@ -20,6 +20,7 @@
             android:layout_centerVertical="true"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/ivBack"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ico_arrow_back"/>
