--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -131,6 +131,7 @@
                     android:layout_height="1dp"
                     android:background="#eeeeee"/>
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layoutVersionInfo"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:background="#FFFFFF"
@@ -148,18 +149,14 @@
                         android:lineSpacingExtra="5dp"
                         android:text="버전정보"/>
 
-                    <TextView
-                        android:id="@+id/version"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:textSize="14dp"
-                        android:textColor="#333333"
-                        android:lineSpacingExtra="6dp"
-                        android:gravity="end"
-                        android:text="V2.0.10"/>
+                        android:src="@drawable/ico_chevron_right"/>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <View
